<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <Button
        android:id="@+id/button9"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:backgroundTint="#2196F3"
        android:onClick="insertData"
        android:text="@string/Book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExp"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtNum"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/CardNum"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txtCV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtCV"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/CV"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txtExp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtExp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/ExpDate"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCV"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="90dp"
        android:layout_height="39dp"
        android:text="@string/Payment"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>